[tool.poetry]
name = "wtv"
version = "0.0.1"
description = "A library and CLI for ion selection in mass spectrometry data."
authors = ["RECETOX"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.3"
matchms = "^0.27.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^25.1.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.13"
ruff = "^0.9.7"

[tool.poetry.scripts]
wtv-cli = "src.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
